syntax = "proto3";

package org.federation;

import "federation.proto";

option go_package = "example/federation;federation";

service FederationService {
  option (grpc.federation.service) = {};
  rpc Get(FederatedRequest) returns (FederatedResponse) {};
}

message FederatedRequest {
  string id = 1;
}

message FederatedResponse {
  option (grpc.federation.message) = {
    messages: [
      {name: "a", message: "A", args: [{name: "id", by: "$.id"}]},
      {name: "b", message: "B", args: [{name: "aid", by: "a.id"}, {name: "did", by: "d.id"}]},
      {name: "c", message: "C", args: [{name: "id", by: "b.id"}]},
      {name: "d", message: "D", args: [{name: "id", by: "c.id"}]}
    ]
  };

  string aid = 1 [(grpc.federation.field).by = "a.id"];
  string bid = 2 [(grpc.federation.field).by = "b.id"];
  string cid = 3 [(grpc.federation.field).by = "c.id"];
  string did = 4 [(grpc.federation.field).by = "d.id"];
}

message A {
  string id = 1 [(grpc.federation.field).string = "ID"];
}

message B {
  string id = 1 [(grpc.federation.field).string = "ID"];
}

message C {
  string id = 1 [(grpc.federation.field).string = "ID"];
}

message D {
  string id = 1 [(grpc.federation.field).string = "ID"];
}
